--- a/Tools/docker-compose.yaml
+++ b/Tools/docker-compose.yaml
@@ -6,5 +6,5 @@ services:
       ports:
         - "1433:1433"
       environment:
-        SA_PASSWORD: "change_this_password123!"
+        SA_PASSWORD: "SqlServer123!"
         ACCEPT_EULA: "Y"
