moved cs to appsettings, moved cs injection to extension method, added volume to db docker container

--- a/CarWorkshop.MVC/appsettings.Development.json
+++ b/CarWorkshop.MVC/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "CarWorkshop": "Data Source=localhost,1433;Database=CarWorkshopDb;Integrated Security=false;User ID=sa;Password=SqlServer123!;TrustServerCertificate=True"
   }
 }
