--- a/Tools/docker-compose.yaml
+++ b/Tools/docker-compose.yaml
@@ -5,6 +5,10 @@ services:
       image: mcr.microsoft.com/mssql/server:2019-latest
       ports:
         - "1433:1433"
+      volumes:
+        - sqlserver-data:/var/opt/mssql
       environment:
         SA_PASSWORD: "SqlServer123!"
         ACCEPT_EULA: "Y"
+volumes:
+  sqlserver-data:
